[package]
name = "ethereum-forkid"
version = "0.2.0"
authors = ["Artem Vorotnikov <artem@vorotnikov.me>"]
repository = "https://github.com/vorot93/ethereum-forkid"
documentation = "https://docs.rs/ethereum-forkid"
description = "Ethereum fork identifier for chain compatibility checks"
keywords = ["ethereum"]
license = "MPL-2.0"
edition = "2021"

[dependencies]
crc = "1"
ethereum-types = "0.11.0"
maplit = "1"
primitive-types = { version = "0.12", default-features = false }
parity-util-mem = "0.9.0"
fastrlp = { version = "0.3", features = ["derive"] }
rlp = "0.5.2"
rlp-derive = "0.1"

thiserror = "1"

[dev-dependencies]
hex-literal = "0.4"
